metadatadeploy/objects/Clover_Assistant_Visit__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>Clover Assistant Visit</label>
    
    <nameField>
        
        <label>Clover Assistant Visit Name</label>
        
        <type>Text</type>
        
    </nameField>
    
    <pluralLabel>Clover Assistant Visits</pluralLabel>
    
    
    <sharingModel>ReadWrite</sharingModel>
    
    
<fields>
        
    <fullName>Account__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
    <description>Account CA Visit is billed under (lookup to TIN)</description>
        
        
    <label>Account</label>
        
    <referenceTo>Account</referenceTo>
        
    <relationshipLabel>Clover Assistant Visits</relationshipLabel>
        
    <relationshipName>Clover_Assistant_Visits</relationshipName>
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>Confirmed_ICD10s_On__c</fullName>
        
        
    <label>Confirmed ICD10s On</label>
        
        
        
    <type>DateTime</type>
        
</fields>
    <fields>
        
    <fullName>Documentation_URL__c</fullName>
        
        
    <label>Documentation URL</label>
        
        
        
    <type>Url</type>
        
</fields>
    <fields>
        
    <fullName>Mode_of_Service__c</fullName>
        
        
    <label>Mode of Service</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>MODE_OF_SERVICE_IN_PERSON</fullName>
                    
                    
                <label>MODE_OF_SERVICE_IN_PERSON</label>
                    
            </value>
                
            <value>
                    
                <fullName>MODE_OF_SERVICE_VIDEO_CALL</fullName>
                    
                    
                <label>MODE_OF_SERVICE_VIDEO_CALL</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
    <fields>
        
    <fullName>Organization__c</fullName>
        
    <deleteConstraint>Restrict</deleteConstraint>
        
    <description>Top-level business organization where this visit occurred</description>
        
        
    <label>Organization</label>
        
    <lookupFilter>
            
        <active>true</active>
            
        <errorMessage>Value does not exist or does not match filter criteria: must lookup to an Organization.</errorMessage>
            
        <filterItems>
                
            <field>Account.Type</field>
                
            <operation>equals</operation>
                
            <value>Organization</value>
                
        </filterItems>
            
        <isOptional>false</isOptional>
            
    </lookupFilter>
        
    <referenceTo>Account</referenceTo>
        
    <relationshipLabel>Clover Assistant Visits (Organization)</relationshipLabel>
        
    <relationshipName>Clover_Assistant_Visits1</relationshipName>
        
    <required>true</required>
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>Practice_Group__c</fullName>
        
    <deleteConstraint>Restrict</deleteConstraint>
        
        
    <label>Practice Group</label>
        
    <lookupFilter>
            
        <active>true</active>
            
        <errorMessage>Value does not exist or does not match filter criteria, must lookup to a Practice Group.</errorMessage>
            
        <filterItems>
                
            <field>Account.Type</field>
                
            <operation>equals</operation>
                
            <value>Practice Group</value>
                
        </filterItems>
            
        <isOptional>false</isOptional>
            
    </lookupFilter>
        
    <referenceTo>Account</referenceTo>
        
    <relationshipLabel>Clover Assistant Visits (Practice Group)</relationshipLabel>
        
    <relationshipName>Clover_Assistant_Visits2</relationshipName>
        
    <required>true</required>
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>Practitioner__c</fullName>
        
    <deleteConstraint>Restrict</deleteConstraint>
        
    <description>Practitioner who performed the visit</description>
        
        
    <label>Practitioner</label>
        
    <lookupFilter>
            
        <active>true</active>
            
        <errorMessage>Value does not exist or does not match filter criteria, must lookup to a Practitioner.</errorMessage>
            
        <filterItems>
                
            <field>Contact.RecordTypeId</field>
                
            <operation>equals</operation>
                
            <value>Practitioner</value>
                
        </filterItems>
            
        <isOptional>false</isOptional>
            
    </lookupFilter>
        
    <referenceTo>Contact</referenceTo>
        
    <relationshipLabel>Clover Assistant Visits</relationshipLabel>
        
    <relationshipName>Clover_Assistant_Visits</relationshipName>
        
    <required>true</required>
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>Source_Date_Created__c</fullName>
        
        
    <label>Source Date Created</label>
        
        
        
    <type>DateTime</type>
        
</fields>
    <fields>
        
    <fullName>Source_Date_Deleted__c</fullName>
        
        
    <label>Source Date Deleted</label>
        
        
        
    <type>DateTime</type>
        
</fields>
    <fields>
        
    <fullName>Source_Date_Last_Modified__c</fullName>
        
        
    <label>Source Date Last Modified</label>
        
        
        
    <type>DateTime</type>
        
</fields>
    <fields>
        
    <fullName>Source_System_Id__c</fullName>
        
        
    <externalId>true</externalId>
        
    <label>Source System Id</label>
        
    <length>255</length>
        
        
        
    <type>Text</type>
        
    <unique>true</unique>
        
</fields>
    <fields>
        
    <fullName>Status__c</fullName>
        
        
    <label>Status</label>
        
        
        
    <type>Picklist</type>
        
    <valueSet>
            
        <valueSetDefinition>
                
                
            <value>
                    
                <fullName>VISIT_STATUS_SIGNED</fullName>
                    
                    
                <label>VISIT_STATUS_SIGNED</label>
                    
            </value>
                
            <value>
                    
                <fullName>VISIT_STATUS_DELETED</fullName>
                    
                    
                <label>VISIT_STATUS_DELETED</label>
                    
            </value>
                
            <value>
                    
                <fullName>VISIT_STATUS_CREATED</fullName>
                    
                    
                <label>VISIT_STATUS_CREATED</label>
                    
            </value>
                
        </valueSetDefinition>
            
    </valueSet>
        
</fields>
</CustomObject>